--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <button type="submit" id="button">Submit your number</button>
     <p id="results"></p>
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
